# az_devops_python_example

./: LICENSE  README.md  azure-pipelines.yml  pyproject.toml
src/app/: example.py
tests/: test_example.py
