[tool.poetry]
name = "az-devops-python-example"
version = "0.1.0"
description = ""
authors = ["Hannes De Smet <hannes.desmet@dataminded.be>"]
license = "MIT"
readme = "README.md"
packages = [{include = "az_devops_python_example"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
