[tool.poetry]
name = "az-devops-python-example"
version = "0.1.0"
description = ""
authors = ["Hannes De Smet <hannes.desmet@dataminded.be>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
